service runs in BG till OS closes it

--- a/ServicePOC/app/src/main/AndroidManifest.xml
+++ b/ServicePOC/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".FirstService" ></service>
-    </application>
 
+        <service android:name=".FirstService"></service>
+
+    </application>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 </manifest>
